# Mimyria

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-cpu.txt  requirements-cu118.txt  requirements-cu126.txt  requirements-cu128.txt
examples/: modulefile
mimyria/: args.py  autotrain.py  autotrain_single_network.py  calculator.py  cli.py  cp2k_input_parser.py  io.py  library.py  postprocess.py
mimyria/models/: __init__.py  apt.py  base.py  parameters.py  pgt.py
mimyria/scripts/: apt-from-efield-derivative.py  apt-from-spatial-derivative.py  autotrain_compute_spectrum.py  autotrain_predict_full.py  autotrain_setup.py  autotrain_step.py  check_cp2k_force_eval.py  compare-spectra.py  compare.py  corr2spec.py  displace-configurations.py  pgt-from-efield-derivative.py  pgt-from-spatial-derivative.py  predict.py  read-model-parameters.py  spectrum-isotropic-average.py  train.py
src/libmimyria/: Makefile  box.cpp  box.hpp  configfile.cpp  configfile.hpp  correlation.cpp  correlation.hpp  exception.cpp  exception.hpp  factory.hpp  frame.cpp  frame.hpp  library.cpp  library.hpp  mimyria.hpp  pch.hpp  task.cpp  task.hpp  trajectory.cpp  trajectory.hpp
src/libmimyria/trajectory_readers/: composite.cpp  lzma_streambuf.hpp  polar.cpp  xyz.cpp  xz.cpp  zstd.cpp  zstd_streambuf.hpp
src/mimyria/: Makefile  box_loader.cpp  box_loader.hpp  main.cpp  plugin.cpp  plugin.hpp  thread_queue.hpp
src/mimyria/tasks/: apt2cf.cpp  pgt2cf.cpp
templates/cp2k/apt-from-field/: force_eval.inc  run-my.inp  run-mz.inp  run-px.inp  run-py.inp  run-pz.inp  run.sh  start.xyz
(+13 files in other folders)
